Modified Welcome section

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
 	<main>
 		<section id="welcome-section">
+      <div class="welcome-contents">
 			<h1>Hey I'am Vasu.</h1>
 			<p>a web developer</p>
-
+      </div>
 		</section>
 
 		<section id="projects">
